# openstaadpy

./: .gitignore  COPYRIGHT.md  Contributing.md  MANIFEST.in  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  setup.py
.github/: CODEOWNERS
Examples/Analytical Examples/: CreateModel.py  GetResults.py  ViewFunctions.py
Tests/: README.md
docs/source/: conf.py  index.rst  modules.rst  openstaadpy.os_analytical.openstaadroot.rst  openstaadpy.os_analytical.oscommad.rst  openstaadpy.os_analytical.osdesign.rst  openstaadpy.os_analytical.oserror.rst  openstaadpy.os_analytical.osgeometry.rst  openstaadpy.os_analytical.osload.rst  openstaadpy.os_analytical.osoutput.rst  openstaadpy.os_analytical.osproperty.rst  openstaadpy.os_analytical.ossupport.rst  openstaadpy.os_analytical.ostable.rst  openstaadpy.os_analytical.osview.rst  openstaadpy.os_analytical.rst  openstaadpy.rst
openstaadpy/: __init__.py  _version.py
openstaadpy/os_analytical/: __init__.py  openStaadHelper.py  openstaadroot.py  oscommand.py  osdesign.py  oserrors.py  osgeometry.py  osload.py  osoutput.py  osproperty.py  ossupport.py  ostable.py  osview.py  staadVersionHelper.py
